--- a/tex/modules/4-A/exercises/A2.tex
+++ b/tex/modules/4-A/exercises/A2.tex
@@ -71,6 +71,18 @@ $$\begin{bmatrix} 1 & 0 & 3 & 0 \\ 0 & 3 & -5 & 0 \end{bmatrix}.$$
 \end{solution}
 
 \begin{problem}{A2}
+Let $T: \IR^2 \rightarrow \IR^4$ be the linear transformation given by the following
+$$T(\vec e_1)=\begin{bmatrix} 1 \\ 0 \\ 3 \\ 0\end{bmatrix}\hspace{2em}
+T(\vec e_2)=\begin{bmatrix} 0 \\ 3 \\ -5 \\ 0 \end{bmatrix}.$$
+\begin{enumerate}[(a)]
+\item Compute \( T\left( \begin{bmatrix}x\\ y  \end{bmatrix} \right) \)
+\item Compute \( T\left( \begin{bmatrix} 2 \\ -3\end{bmatrix} \right) \)
+\end{enumerate}
+\end{problem}
+\begin{solution}
+\end{solution}
+
+\begin{problem}{A2}
 Let $T: \IR^4 \rightarrow \IR^2$ be the linear transformation given by $$T\left(\begin{bmatrix} x_1 \\ x_2 \\ x_3 \\ x_4 \end{bmatrix} \right) = \begin{bmatrix} x_1+3x_3 \\ 3x_2-x_3 \end{bmatrix}.$$
 \begin{enumerate}[(a)]
 \item Write the standard matrix for $T$.
@@ -105,6 +117,23 @@ $$\begin{bmatrix} 0 & 1 & 3 \end{bmatrix}.$$
 \begin{enumerate}[(a)]
 \item Compute \( T\left( \begin{bmatrix}x\\ y \\ z  \end{bmatrix} \right) \)
 \item Compute \( T\left( \begin{bmatrix} 2 \\ 3 \\ -1\end{bmatrix} \right) \)
+\end{enumerate}
+\end{problem}
+
+\begin{problem}{A2}
+Let $T: \IR^2 \rightarrow \IR^3$ be the linear transformation given by the following
+\[
+  T\left(\begin{bmatrix}1\\0\end{bmatrix}\right)
+    =
+  \begin{bmatrix} 0 \\ 1 \\ 3 \end{bmatrix}
+\hspace{2em}
+  T\left(\begin{bmatrix}0\\1\end{bmatrix}\right)
+    =
+  \begin{bmatrix} 3 \\ 0 \\ 0 \end{bmatrix}
+\]
+\begin{enumerate}[(a)]
+\item Compute \( T\left( \begin{bmatrix}x\\ y \end{bmatrix} \right) \)
+\item Compute \( T\left( \begin{bmatrix} 1\\ 3\end{bmatrix} \right) \)
 \end{enumerate}
 \end{problem}
 
