--- a/tex/modules/4-A/exercises/A4.tex
+++ b/tex/modules/4-A/exercises/A4.tex
@@ -12,20 +12,6 @@ and a basis for the image is
 $$\left\{ \begin{bmatrix} 1 \\ 1 \\ 2 \\ 1 \end{bmatrix} , \begin{bmatrix} 3 \\ -1 \\ 3 \\ -2 \end{bmatrix}\right\} $$
 \end{solution}
 
-\begin{problem}{A4}
-Let $T: \P^3 \rightarrow \P^3$ be the linear transformation given by $$T\left( ax^3+bx^2+cx+d \right)  = (a+3b+3c+7d)x^3 + (a+3b-c-d)x^2+  (2a+6b+3c+8d)x+  (a+3b-2c-3d)$$
-Compute a basis for the kernel and a basis for the image of $T$.
-\end{problem}
-\begin{solution}
-
-$$\RREF\left(\begin{bmatrix} 1 & 3 & 3 & 7 \\ 1 & 3 & -1 & -1 \\ 2 & 6 & 3 & 8 \\ 1 & 3 & -2 & -3 \end{bmatrix}\right) = \begin{bmatrix} 1 & 3 & 0 & 1 \\ 0 & 0 & 1 & 2 \\ 0 & 0 & 0 & 0 \end{bmatrix}$$
-
-Then a basis for the kernel is
-$$\left\{ -3x^3+x^2, -x^3-2x+1 \right\}$$
-and a basis for the image is
-$$\left\{ x^3+x^2+2x+1 , 3x^3-x^2+3x-2\right\} $$
-\end{solution}
-
 
 
 \begin{problem}{A4}
@@ -83,87 +69,141 @@ Thus \(\left\{
 
 
 \begin{problem}{A4}
-Let $T: M_{2,3} \rightarrow \IR^3$ be the linear map given by \(
-  T\left(\begin{bmatrix} a & b & c \\ x & y & z \end{bmatrix} \right) =
+Let $T: \IR^3 \rightarrow \IR^3$ be the linear map given by the standard matrix
+\(
   \begin{bmatrix}
-    a+x \\ b+y \\ c+z
+    1 & 2 & 5 \\
+    0 & -2 & -4 \\
+    -3 & 1 & -1
   \end{bmatrix}
 \). Compute a basis for the kernel and a basis for the image of $T$.
 \end{problem}
 \begin{solution}
-Rewrite as \(
-  T'\left(\begin{bmatrix} a \\ b \\ c \\ x \\ y \\ z \end{bmatrix} \right) =
-  \begin{bmatrix}
-    a+x \\ b+y \\ c+z
-  \end{bmatrix}
-\).
 \[
   \RREF \left( \begin{bmatrix}
-    1 & 0 & 0 & 1 & 0 & 0\\
-    0 & 1 & 0 & 0 & 1 & 0\\
-    0 & 0 & 1 & 0 & 0 & 1
+    1 & 2 & 5 \\
+    0 & -2 & -4 \\
+    -3 & 1 & -1
   \end{bmatrix} \right) = \begin{bmatrix}
-    1 & 0 & 0 & 1 & 0 & 0\\
-    0 & 1 & 0 & 0 & 1 & 0\\
-    0 & 0 & 1 & 0 & 0 & 1
+    1 & 0 & 1 \\
+    0 & 1 & 2 \\
+    0 & 0 & 0
   \end{bmatrix}
 \]
 
 Thus \(\left\{
-  \begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix},
-  \begin{bmatrix} 0 \\ 1 \\ 0 \end{bmatrix},
-  \begin{bmatrix} 0 \\ 0 \\ 1 \end{bmatrix}
+  \begin{bmatrix} 1 \\ 0 \\ -3 \end{bmatrix},
+  \begin{bmatrix} 2 \\ -2 \\ 1 \end{bmatrix}
 \right\} \) is a basis for the image, and \(\left\{
-  \begin{bmatrix} -1 & 0 & 0 \\ 1 & 0 & 0 \end{bmatrix},
-  \begin{bmatrix} 0 & -1 & 0 \\ 0 & 1 & 0 \end{bmatrix},
-  \begin{bmatrix} 0 & 0 & -1 \\ 0 & 0 & 1 \end{bmatrix}
+  \begin{bmatrix} -1 \\ -2 \\ 1 \end{bmatrix}
 \right\} \) is a basis for the kernel.
 \end{solution}
 
 
 \begin{problem}{A4}
-Let $T: M_{2,2} \rightarrow \IR^3$ be the linear map given by $T\left(\begin{bmatrix} x & y \\ z & w \end{bmatrix} \right) = \begin{bmatrix}  8x-3y-z+4w \\ y+3z-4w \\ -7x+3y+2z-5w\end{bmatrix} $.
-Compute a basis for the kernel and a basis for the image of $T$.
-\end{problem}
-\begin{solution}
-$$\RREF \left( \begin{bmatrix} 8 & -3 & -1 & 4 \\ 0 & 1 & 3 & -4 \\ -7 & 3 & 2 & -5 \end{bmatrix} \right) = \begin{bmatrix} 1 & 0 & 1 & -1 \\ 0 & 1 & 3 & -4 \\ 0 & 0 & 0 & 0 \end{bmatrix}$$
-
-Thus \(\left\{ \begin{bmatrix} 8 \\ 0 \\ -7 \end{bmatrix}, \begin{bmatrix} -3 \\ 1 \\ 3 \end{bmatrix} \right\}\) is a basis for the image, and \( \left\{ \begin{bmatrix} -1 & -3 \\ 1 & 0 \end{bmatrix}, \begin{bmatrix} 1 & 4 \\ 0 & 1 \end{bmatrix} \right\} \) is a basis for the kernel.
-\end{solution}
-
-
-\begin{problem}{A4}
-Let $T: M_{2,2} \rightarrow \IR^3$ be the linear map given by \(
-  T\left(\begin{bmatrix} a & b \\ x & y \end{bmatrix} \right) =
+Let $T: \IR^4 \rightarrow \IR^2$ be the linear map given by the standard matrix
+\(
   \begin{bmatrix}
-    a+x \\ 0 \\ b+y
+    1 & 2 & 5 & -1 \\
+    0 & -2 & -4 & 2
   \end{bmatrix}
 \). Compute a basis for the kernel and a basis for the image of $T$.
 \end{problem}
 \begin{solution}
-Rewrite as \(
-  T'\left(\begin{bmatrix} a \\ b \\ x \\ y \end{bmatrix} \right) =
-  \begin{bmatrix}
-    a+x \\ 0 \\ b+y
-  \end{bmatrix}
-\).
 \[
   \RREF \left( \begin{bmatrix}
-    1 & 0 & 1 & 0 \\
-    0 & 0 & 0 & 0 \\
-    0 & 1 & 0 & 1
+    1 & 2 & 5 & -1 \\
+    0 & -2 & -4 & 2
   \end{bmatrix} \right) = \begin{bmatrix}
-    1 & 0 & 1 & 0 \\
-    0 & 0 & 0 & 0 \\
-    0 & 1 & 0 & 1
+    1 & 0 & 1 & 1 \\
+    0 & 1 & 2 & -1
   \end{bmatrix}
 \]
 
 Thus \(\left\{
-  \begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix},
-  \begin{bmatrix} 0 \\ 0 \\ 1 \end{bmatrix}
+  \begin{bmatrix} 1 \\ 0  \end{bmatrix},
+  \begin{bmatrix} 2 \\ -2 \end{bmatrix}
 \right\} \) is a basis for the image, and \(\left\{
-  \begin{bmatrix} -1 & 0 \\ 1 & 0 \end{bmatrix},
-  \begin{bmatrix} 0 & -1 \\ 0 & 1 \end{bmatrix}
+  \begin{bmatrix} -1 \\ -2 \\ 1 \\ 0 \end{bmatrix},
+  \begin{bmatrix} -1 \\ 1 \\ 0 \\ 1 \end{bmatrix}
+\right\} \) is a basis for the kernel.
+\end{solution}
+
+
+\begin{problem}{A4}
+Let $T: \IR^2 \rightarrow \IR^5$ be the linear map given by the standard matrix
+\(
+  \begin{bmatrix}
+    3 & 1 \\
+    0 & 0 \\
+    -6 & -2 \\
+    1 & \frac{1}{3} \\
+    9 & 3
+  \end{bmatrix}
+\). Compute a basis for the kernel and a basis for the image of $T$.
+\end{problem}
+\begin{solution}
+\[
+  \RREF \left(\begin{bmatrix}
+    3 & 1 \\
+    0 & 0 \\
+    -6 & -2 \\
+    1 & \frac{1}{3} \\
+    9 & 3
+  \end{bmatrix} \right) = \begin{bmatrix}
+    1 & \frac{1}{3} \\
+    0 & 0 \\
+    0 & 0 \\
+    0 & 0 \\
+    0 & 0
+  \end{bmatrix}
+\]
+
+Thus \(\left\{
+\begin{bmatrix}
+  3  \\
+  0  \\
+  -6 \\
+  1 \\
+  9 \\
+\end{bmatrix}
+\right\} \) is a basis for the image, and \(\left\{
+  \begin{bmatrix} -\frac{1}{3} \\ 1\end{bmatrix}
+\right\} \) is a basis for the kernel.
+\end{solution}
+
+\begin{problem}{A4}
+Let $T: \IR^4 \rightarrow \IR^3$ be the linear map given by the standard matrix
+\(
+  \begin{bmatrix}
+    2 & 1 & 0 & 3 \\
+    -4 & -2 & 0 & 5 \\
+    -2 & -1 & 0 & 0
+  \end{bmatrix}
+\). Compute a basis for the kernel and a basis for the image of $T$.
+\end{problem}
+\begin{solution}
+\[
+  \RREF \left(\begin{bmatrix}
+    2 & 1 & 0 & 3 \\
+    -4 & -2 & 0 & 5 \\
+    -2 & -1 & 0 & 0
+  \end{bmatrix} \right) = \begin{bmatrix}
+    1 & \frac{1}{2} & 0 & 0 \\
+    0 & 0 & 0 & 1 \\
+    0 & 0 & 0 & 0
+  \end{bmatrix}
+\]
+
+Thus \(\left\{
+\begin{bmatrix}
+  2 \\ -4 \\ -2
+\end{bmatrix},
+\begin{bmatrix}
+  3 \\ 5 \\ 0
+\end{bmatrix}
+\right\} \) is a basis for the image, and \(\left\{
+  \begin{bmatrix} -\frac{1}{2} \\ 1 \\ 0 \\ 0\end{bmatrix},
+  \begin{bmatrix} 0 \\ 0 \\ 1 \\ 0\end{bmatrix}
 \right\} \) is a basis for the kernel.
 \end{solution}
