Tweak notation on A.2.14

--- a/tex/modules/4-A/sections/2.tex
+++ b/tex/modules/4-A/sections/2.tex
@@ -283,19 +283,19 @@ Compute $T\left(\begin{bmatrix} 1\\ 2 \\ 3 \end{bmatrix} \right) $.
   Compute the following linear transformations of vectors given their
   standard matrices.
   \[
-    T\left(\begin{bmatrix}1\\2\end{bmatrix}\right)
+    T_1\left(\begin{bmatrix}1\\2\end{bmatrix}\right)
     \text{ for the standard matrix }
-    A=\begin{bmatrix}4&3\\0&-1\\1&1\\3&0\end{bmatrix}
+    A_1=\begin{bmatrix}4&3\\0&-1\\1&1\\3&0\end{bmatrix}
   \]
   \[
-    T\left(\begin{bmatrix}1\\1\\0\\-3\end{bmatrix}\right)
+    T_2\left(\begin{bmatrix}1\\1\\0\\-3\end{bmatrix}\right)
     \text{ for the standard matrix }
-    A=\begin{bmatrix}4&3&0&-1\\1&1&3&0\end{bmatrix}
+    A_2=\begin{bmatrix}4&3&0&-1\\1&1&3&0\end{bmatrix}
   \]
   \[
-    T\left(\begin{bmatrix}0\\-2\\0\end{bmatrix}\right)
+    T_3\left(\begin{bmatrix}0\\-2\\0\end{bmatrix}\right)
     \text{ for the standard matrix }
-    A=\begin{bmatrix}4&3&0\\0&-1&3\\5&1&1\\3&0&0\end{bmatrix}
+    A_3=\begin{bmatrix}4&3&0\\0&-1&3\\5&1&1\\3&0&0\end{bmatrix}
   \]
 \end{activity}
 
