Fix grammar, typo, spacing on A.3, A.4

--- a/tex/modules/4-A/sections/3.tex
+++ b/tex/modules/4-A/sections/3.tex
@@ -178,7 +178,7 @@ standard matrix
 \[
   \begin{bmatrix} 1 & 0 & 0 \\ 0 & 1 & 0 \end{bmatrix}
 \]
-has all pivot (zero) rows.
+has a pivot in each row.
 \end{observation}
 
 
