--- a/tex/modules/3-S/exercises/S5.tex
+++ b/tex/modules/3-S/exercises/S5.tex
@@ -121,7 +121,7 @@ Since the resulting matrix is not the identity matrix, it is not a basis.
 \end{solution}
 
 \begin{problem}{S5}
-Let \(W\) be the subspace of \(\P^3\) given by \(W = \vspan \left( \left\{ x^3+x^2+2x+1, 3x^3+3x^2+6x+3, 3x^3-x^2+3x-2, 7x^3-x^2+8x-3 \right\} \right)\).  Find a basis for \(W\).
+Let \(W\) be the subspace of \(\P^3\) given by \[(W = \vspan \left( \left\{ x^3+x^2+2x+1, 3x^3+3x^2+6x+3, 3x^3-x^2+3x-2, 7x^3-x^2+8x-3 \right\} \right).\]  Find a basis for \(W\).
 \end{problem}
 \begin{solution}
 \[\RREF\left(\begin{bmatrix} 1 & 3 & 3 & 7 \\ 1 & 3 & -1 & -1 \\ 2 & 6 & 3 & 8 \\ 1 & 3 & -2 & -3 \end{bmatrix}\right) = \begin{bmatrix} 1 & 3 & 0 & 1 \\ 0 & 0 & 1 & 2 \\ 0 & 0 & 0 & 0 \\  0 & 0 & 0 & 0 \end{bmatrix}\]
