--- a/tex/modules/3-S/exercises/S5.tex
+++ b/tex/modules/3-S/exercises/S5.tex
@@ -171,7 +171,7 @@ Since the first two columns are pivot columns, \(\left\{ -3x^2-8x, x^2+2x+2\righ
 \end{solution}
 
 \begin{problem}{S5}
-Let \(W\) be the subspace of \(\P^3\) given by \(W=\vspan\left( \left\{ x^3-x^2+3x-3, 2x^3+x+1, 3x^3-x^2+4x-2, x^3+x^2+x-7\right\}\right)\).  Compute the dimension of \(W\).
+Let \(W\) be the subspace of \(\P^3\) given by \[W=\vspan\left( \left\{ x^3-x^2+3x-3, 2x^3+x+1, 3x^3-x^2+4x-2, x^3+x^2+x-7\right\}\right).\]  Compute the dimension of \(W\).
 \end{problem}
 \begin{solution}
 \[ \RREF \left( \begin{bmatrix} 1 & 2 & 3 & 1 \\ -1 & 0 & -1 & 1 \\ 3 & 1 & 4 & 1 \\ -3 & 1 & -2 & -7 \end{bmatrix} \right) =  \begin{bmatrix} 1 & 0 & 1 & 0 \\ 0 & 1 & 1 & 0 \\ 0 & 0 & 0 & 1 \\ 0 & 0 & 0 & 0\end{bmatrix}\]
