--- a/tex/sample-exercises.tex
+++ b/tex/sample-exercises.tex
@@ -622,9 +622,10 @@ Determine if each of the following linear transformations is injective (one-to-o
 \begin{solution}
 \begin{enumerate}[(a)]
 \item $ \RREF\begin{bmatrix} 1 & 1 \\ -1 & 0 \end{bmatrix}=\begin{bmatrix}1 & 0 \\ 0 & 1 \end{bmatrix}$.  Since each column is a pivot column, $S$ is injective.  Since there is no zero row, $S$ is surjective.
+(Alternatively, since the result is the identity matrix, \(S\) is bijective.)
 \item $$\RREF\begin{bmatrix}1 & 3 & 2 & -3 \\ 2 & 4 & 6 & -10 \\ 1 & 6 & -1 & 3 \end{bmatrix} = \begin{bmatrix} 1 & 0 & 5 & -9 \\ 0 & 1 & -1 & 2 \\ 0 & 0 & 0 & 0\end{bmatrix}$$
-Since there is a row of zeroes, the image of \(T\) does not span \(\IR^3\), so \(T\) is not surjective.  Since there are non-pivot columns, \(T\) is not injective either.
-%Alternatively, since $\dim \IR^4 > \dim \IR^3$, $T$ is not injective.
+Since there is a row of zeroes, the span of the columns does not equal \(\IR^3\), so \(T\) is not surjective.  Since there are non-pivot columns, \(T\) is not injective either.
+(Alternatively, since $\dim \IR^4 > \dim \IR^3$, $T$ is not injective.)
 
 \end{enumerate}
 \end{solution}
