add observation, fix spacing in slides

--- a/tex/modules/4-A/sections/4.tex
+++ b/tex/modules/4-A/sections/4.tex
@@ -189,7 +189,7 @@ one group that means \(T\) is \textbf{injective}, and one group that means
   vectors into each other, and a linear transformation cannot
   increase the dimension of its image.
   \begin{center}
-    \begin{tikzpicture}[x=0.15in,y=0.15in]
+    \begin{tikzpicture}[x=0.12in,y=0.12in]
       \begin{scope}[shift={(0,0)}]
         \draw (0,0) -- (3,0);
         \draw (0,0) -- (0,3);
@@ -209,7 +209,7 @@ one group that means \(T\) is \textbf{injective}, and one group that means
       \node[anchor=north] at (5,-1) {not injective, \(3>2\)};
     \end{tikzpicture}
     \hspace{3em}
-    \begin{tikzpicture}[x=0.15in,y=0.15in]
+    \begin{tikzpicture}[x=0.12in,y=0.12in]
       \begin{scope}[shift={(0,1)}]
         \draw (-2,0) -- (2,0);
         \draw (0,-2) -- (0,2);
@@ -298,5 +298,23 @@ Let $T: \IR^3 \rightarrow \IR^2$ be given by $$T\left(\begin{bmatrix} x \\ y  \\
 \item $T$ is bijective.
 \end{enumerate}
 \end{activity}
+
+\begin{observation}
+For \(T:\IR^n\to\IR^m\) where \(n=m\), exactly one of these must hold:
+\begin{itemize}
+\item $T$ is bijective.
+\item $T$ is neither injective nor surjective
+\end{itemize}
+For \(T:\IR^n\to\IR^m\) where \(n<m\), exactly one of these must hold:
+\begin{itemize}
+\item $T$ is injective, but not surjective
+\item $T$ is neither injective nor surjective
+\end{itemize}
+For \(T:\IR^n\to\IR^m\) where \(n>m\), exactly one of these must hold:
+\begin{itemize}
+\item $T$ is surjective, but not injective
+\item $T$ is neither injective nor surjective
+\end{itemize}
+\end{observation}
 
 \end{applicationActivities}
