fix A.4 typos, revise M.1

--- a/tex/modules/4-A/sections/4.tex
+++ b/tex/modules/4-A/sections/4.tex
@@ -159,9 +159,11 @@ one group that means \(T\) is \textbf{injective}, and one group that means
   What can you immediately conclude about the linear map \(T:\IR^5\to\IR^3\)?
   \begin{enumerate}[a)]
     \item Its standard matrix has more columns than rows, so \(T\) is not
+    injective.
     \item Its standard matrix has more columns than rows, so \(T\) is
     injective.
     \item Its standard matrix has more rows than columns, so \(T\) is not
+    surjective.
     \item Its standard matrix has more rows than columns, so \(T\) is
     surjective.
   \end{enumerate}
@@ -171,9 +173,11 @@ one group that means \(T\) is \textbf{injective}, and one group that means
   What can you immediately conclude about the linear map \(T:\IR^2\to\IR^7\)?
   \begin{enumerate}[a)]
     \item Its standard matrix has more columns than rows, so \(T\) is not
+    injective.
     \item Its standard matrix has more columns than rows, so \(T\) is
     injective.
     \item Its standard matrix has more rows than columns, so \(T\) is not
+    surjective.
     \item Its standard matrix has more rows than columns, so \(T\) is
     surjective.
   \end{enumerate}
@@ -234,8 +238,8 @@ one group that means \(T\) is \textbf{injective}, and one group that means
       \node[anchor=north] at (5,-2) {not surjective, \(2<3\)};
     \end{tikzpicture}
     \end{center}
-  But these results do \textbf{not} reverse. For example,
-  \(T:\IR^5\to\IR^4\) might not be surjective, even though \(5\not<4\).
+  But dimension arguments \textbf{cannot} be used to prove a map \textbf{is}
+  injective or surjective.
 \end{fact}
 
 
