Update module M readiness

--- a/tex/modules/5-M/readiness/resources.tex
+++ b/tex/modules/5-M/readiness/resources.tex
@@ -2,4 +2,8 @@
 \item Function composition (Khan Academy):
       \url{http://bit.ly/2wkz7f3}
 % \url{https://www.khanacademy.org/math/algebra2/manipulating-functions/funciton-composition/v/function-composition}
+\item Domain and codomain:
+\url{https://www.youtube.com/watch?v=BQMyeQOLvpg}
+\item Interpreting injectivity and surjectivity in many ways:
+\url{https://www.youtube.com/watch?v=WpUv72Y6Dl0}
 \end{readinessAssuranceResources}
