--- a/tex/modules/5-M/readiness/test.tex
+++ b/tex/modules/5-M/readiness/test.tex
@@ -31,40 +31,6 @@ Compute $(f \circ g)(2)$.
 
 
 %C
-\item Solve the system of linear equations
-\begin{align*}
-x+3y &= -2 \\
-2x-7y &= 9
-\end{align*}
-
-\begin{multicols}{4}
-\begin{readinessAssuranceTestChoices}
-\item $\begin{bmatrix} -2 \\ 9 \end{bmatrix}$
-\item $\begin{bmatrix} 2 \\ 3 \end{bmatrix}$
-\item $\begin{bmatrix} 1 \\ -1 \end{bmatrix}$ %Correct
-\item $\begin{bmatrix} 3 \\ 1 \end{bmatrix}$
-\end{readinessAssuranceTestChoices}
-\end{multicols}
-
-%B
-\item Let $a, b, c$ be fixed real numbers.  How many solutions does the system of linear equations below have?
-\begin{align*}
-x+2y+3z &= a \\
-y-z &= b \\
-y+z &= c
-\end{align*}
-
-\begin{multicols}{4}
-\begin{readinessAssuranceTestChoices}
-\item $0$
-\item $1$ %Correct
-\item Infinitely many
-\item It depends on the values of $a$, $b$, and $c$.
-\end{readinessAssuranceTestChoices}
-\end{multicols}
-
-
-%C
 \item What is the standard matrix corresponding to the linear transformation $T: \IR^3 \rightarrow \IR^3$ given by $T\left( \begin{bmatrix} x \\ y \\ z \end{bmatrix}\right) = \begin{bmatrix} x+2y-z \\ y+3z \\x+7y \end{bmatrix}$?
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
@@ -75,18 +41,39 @@ y+z &= c
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
-\newpage
-%A
-\item Let $T: \IR^2 \rightarrow \IR^3$ be the linear transformation with standard matrix $A=\begin{bmatrix} 2 & 3 \\ -1 & -1 \\ 0 & 4 \end{bmatrix}$.  Compute $T\left(\begin{bmatrix} 2 \\ -1 \end{bmatrix}\right)$.
+%B
+\item Let \(T: \IR^3 \rightarrow \IR^2\) be the linear map corresponding to the standard matrix \(\begin{bmatrix} 2 & 1 & -1 \\ 0 & 1 & 3  \end{bmatrix} \).  Compute \(T\left(\begin{bmatrix} 1 \\ -1 \\ 3 \end{bmatrix} \right)\).
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item $\begin{bmatrix} 1 \\ -1 \\ -4 \end{bmatrix}$ %Correct
+\item $\begin{bmatrix} -2 \\ -8  \end{bmatrix}$
+\item $\begin{bmatrix}  -2 \\ 8 \end{bmatrix}$ %Correct
+\item $\begin{bmatrix} 2 \\ -4 \end{bmatrix}$
+\item $\begin{bmatrix}  2 \\ 4 \end{bmatrix}$ 
+\end{readinessAssuranceTestChoices}
+\end{multicols}
+
+%C
+\item Let $T: \IR^2 \rightarrow \IR^3$ be the linear transformation corresponding to the standard matrix $A=\begin{bmatrix} 2 & 3 \\ -1 & -1 \\ 0 & 4 \end{bmatrix}$.  Compute $T\left(\begin{bmatrix} 2 \\ -1 \end{bmatrix}\right)$.
+\begin{multicols}{4}
+\begin{readinessAssuranceTestChoices}
 \item $\begin{bmatrix} 2 \\ -1 \\ 0 \end{bmatrix}$
 \item $\begin{bmatrix} 5 \\ 7 \\ 4\end{bmatrix}$
+\item $\begin{bmatrix} 1 \\ -1 \\ -4 \end{bmatrix}$ %Correct
 \item $\begin{bmatrix} 4 \\ -1 \\ 8 \end{bmatrix}$
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
+\newpage
+%A
+\item Let \(T: \IR^4 \rightarrow \IR^2\) be the linear transformation corresponding to the standard matrix \(\begin{bmatrix} 3 & -1 & 0 & 2 \\ -2 & -4 & -1 & 1 \end{bmatrix} \).  What are the domain and codomain of \(T\)?
+%\begin{multicols}{4}
+\begin{readinessAssuranceTestChoices}
+\item The domain is \(\IR^4\) and the codomain is \(\IR^2\)
+\item The domain is \(\IR^2\) and the codomain is \(\IR^4\)
+\item The domain and codomain are both \(\IR^2\)
+\item The domain and codomain are both \(\IR^4\)
+\end{readinessAssuranceTestChoices}
+%\end{multicols}
 
 %D
 \item Which of the following is true of the linear transformation $T: \IR^3 \rightarrow \IR^3$ given by $$T\left(\begin{bmatrix} x \\ y \\ z \end{bmatrix} \right) = \begin{bmatrix} x+3y-4z \\ x+y \\ 3z \end{bmatrix}?$$
